--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.0.2
   cupertino_icons: ^1.0.2
   fluro: ^2.0.5
   flutter:
     sdk: flutter
   google_fonts: ^5.1.0
+  provider: ^6.0.5
+  universal_html: ^2.2.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
